traefik-web-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: ingress-traefik
  labels:
    app.kubernetes.io/name: ingress-traefik
spec:
  selector:
    app.kubernetes.io/name: ingress-traefik
  ports:
  - name: web
    port: 80
    targetPort: 8080s
